<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".views.BillDetailFragment" android:id="@+id/frameLayout4"
                                             android:background="@color/darkSkyBlue">
    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:background="@color/richBlack"
            android:id="@+id/constraintLayout3">

        <TextView
                android:text="@string/billsNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_bill_id"
                android:textColor="@color/slateGray" android:textSize="28sp" android:layout_marginTop="24dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_client_name" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_bill_id" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:textSize="24sp" android:textColor="@color/slateGray"/>
        <TextView
                android:text="@string/lastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_client_last_name" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintTop_toBottomOf="@+id/tv_client_name"
                android:textColor="@color/slateGray" android:textSize="24sp" android:layout_marginTop="8dp"/>
        <TextView
                android:text="@string/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_client_phone" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_client_last_name" android:textColor="@color/slateGray"
                android:textSize="24sp"/>
        <TextView
                android:text="@string/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_bill_date" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_client_phone" android:textSize="24sp"
                android:textColor="@color/slateGray" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:background="@color/slateGray"
            android:id="@+id/constraintLayout2">

        <TextView
                android:text="@string/total2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" android:textColor="@color/smokyBlack"
                android:textSize="24sp"/>
        <TextView
                android:text="@string/currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_total_bill" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent" android:textSize="24sp"
                android:textColor="@color/smokyBlack"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" android:id="@+id/rv_bill_detail"/>
</android.support.constraint.ConstraintLayout>