<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".views.HomeFragment" android:id="@+id/frameLayout"
                                             android:background="@color/darkSkyBlue">

    <!-- TODO: Update blank fragment layout -->
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/welcomeMsg"
            android:id="@+id/tv_welcome" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="64dp" android:layout_marginTop="64dp" android:layout_marginEnd="64dp"
            android:textSize="24sp" android:textColor="@color/smokyBlack" android:textAllCaps="false"
            android:textAlignment="center"/>
    <ImageView
            android:src="@drawable/store"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/imageView3" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:scaleType="center" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_products"/>
    <Button
            android:text="@string/products"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:id="@+id/btn_products" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_shop_cart" android:layout_marginBottom="8dp"
            android:background="@color/trolleyGray" android:drawableStart="@drawable/ic_products_48"
            android:paddingLeft="64dp" android:paddingRight="64dp" android:textColor="@color/richBlack"
            android:textSize="24sp" android:textStyle="bold" android:textAllCaps="false"/>
    <Button
            android:text="@string/cart"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:id="@+id/btn_shop_cart" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_bills"
            android:drawableStart="@drawable/ic_cart_48" android:background="@color/trolleyGray"
            android:textColor="@color/richBlack" android:paddingLeft="64dp" android:paddingRight="64dp"
            android:textSize="24sp" android:textAllCaps="false" app:layout_constraintHorizontal_bias="0.0"
            android:textStyle="bold" android:layout_marginBottom="8dp"/>
    <Button
            android:text="@string/bills"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:id="@+id/btn_bills" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:drawableStart="@drawable/ic_bill"
            android:background="@color/trolleyGray" android:paddingLeft="64dp" android:paddingRight="64dp"
            android:textSize="24sp" android:textColor="@color/richBlack" android:textAllCaps="false"
            android:textStyle="bold"/>

</android.support.constraint.ConstraintLayout>