<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.LoginActivity" android:background="@drawable/backgroundop">

    <Button
            android:text="@string/logIn"
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:id="@+id/btn_login_action" android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="64dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="64dp" android:background="@drawable/rounded_button"
            android:textColor="@color/richBlack" android:textSize="18dp"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="200dp" app:srcCompat="@drawable/logo"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"/>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/slateGray" android:id="@+id/ti_user"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/ti_pass" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="64dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="64dp">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user" android:textColorHint="@color/slateGray"
                android:textColor="@color/white" android:backgroundTint="@color/slateGray"
                android:id="@+id/input_user"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/slateGray" android:id="@+id/ti_pass"
            android:layout_marginEnd="64dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_login_action" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="64dp">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password" android:textColor="@color/white"
                android:textColorHint="@color/slateGray" android:backgroundTint="@color/slateGray"
                android:id="@+id/input_pass" android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>
</android.support.constraint.ConstraintLayout>